csye6225-infra.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: CSYE 6225 IaC
Parameters:
  vpcName:
    Description: "VPC Name"
    Type: String
    Default: "myVPC"
  VpcCidrBlock:
    Description: "CIDR block for VPC"
    Type: String
    Default: "10.0.0.0/16"
  Subnet1CidrBlock:
    Description: "CIDR block for Subnet1"
    Type: String
    Default: "10.0.1.0/24"
  Subnet2CidrBlock:
    Description: "CIDR block for Subnet2"
    Type: String
    Default: "10.0.2.0/24"
  Subnet3CidrBlock:
    Description: "CIDR block for Subnet3"
    Type: String
    Default: "10.0.3.0/24"
  PrivateSubnet1CidrBlock:
    Description: "CIDR block for Subnet3"
    Type: String
    Default: "10.0.1.1/24"
  PrivateSubnet2CidrBlock:
    Description: "CIDR block for Subnet3"
    Type: String
    Default: "10.0.1.2/24"
  PrivateSubnet3CidrBlock:
    Description: "CIDR block for Subnet3"
    Type: String
    Default: "10.0.1.3/24"
  AMI:
    Description: "AMI for Instance"
    Type: String
  KeyName:
    Description: "Key Name for Instance"
    Type: String
  environment:
    Description: "Environment"
    Type: String
  DBUsername:
    NoEcho: 'true'
    Description: Username for MySQL database access
    Type: String
  DBPassword:
    NoEcho: 'true'
    Description: Password MySQL database access
    Type: String
Resources:
  myVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCidrBlock
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'true'
      InstanceTenancy: 'default'
      Tags:
      - Key: Name
        Value: !Ref AWS::StackName
  mySubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: myVPC
      CidrBlock: !Ref Subnet1CidrBlock
      AvailabilityZone: !Select [ 0, !GetAZs ]
      Tags:
      - Key: Name
        Value: !Ref AWS::StackName
  mySubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: myVPC
      CidrBlock: !Ref Subnet2CidrBlock
      AvailabilityZone: !Select [ 1, !GetAZs ]
      Tags:
      - Key: Name
        Value: !Ref AWS::StackName
  mySubnet3:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: myVPC
      CidrBlock: !Ref Subnet3CidrBlock
      AvailabilityZone: !Select [ 2, !GetAZs ]
      Tags:
      - Key: Name
        Value: !Ref AWS::StackName
  myPrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: myVPC
      CidrBlock: !Ref PrivateSubnet1CidrBlock
      AvailabilityZone: !Select [ 0, !GetAZs ]
      Tags:
      - Key: Name
        Value: !Ref AWS::StackName
      MapPublicIpOnLaunch: 'false'
  myPrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: myVPC
      CidrBlock: !Ref PrivateSubnet2CidrBlock
      AvailabilityZone: !Select [ 1, !GetAZs ]
      Tags:
      - Key: Name
        Value: !Ref AWS::StackName
      MapPublicIpOnLaunch: 'false'
  myPrivateSubnet3:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: myVPC
      CidrBlock: !Ref PrivateSubnet3CidrBlock
      AvailabilityZone: !Select [ 2, !GetAZs ]
      Tags:
      - Key: Name
        Value: !Ref AWS::StackName
      MapPublicIpOnLaunch: 'false'
  myInternetGateway:
    Type: AWS::EC2::InternetGateway
  
  myVPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: myVPC
      InternetGatewayId: !Ref myInternetGateway

  myRouteTable:
    DependsOn: myVPCGatewayAttachment
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref myVPC
      Tags:
      - Key: Name
        Value: !Ref AWS::StackName
  privateRouteTable:
    DependsOn: myVPCGatewayAttachment
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref myVPC
      Tags:
      - Key: Name
        Value: !Ref AWS::StackName
  # privateRoute:
  #   Type: AWS::EC2::Route
  #   DependsOn: myVPCGatewayAttachment
  #   Properties:
  #      RouteTableId:
  #        Ref: privateRouteTable
  #      GatewayId:
  #        Ref: myInternetGateway
  myRoute:
    Type: AWS::EC2::Route
    DependsOn: myVPCGatewayAttachment
    Properties:
       RouteTableId:
         Ref: myRouteTable
       DestinationCidrBlock: 0.0.0.0/0
       GatewayId:
         Ref: myInternetGateway
  mySubnetARouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref mySubnet1
      RouteTableId: !Ref myRouteTable
  mySubnetARouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref mySubnet2
      RouteTableId: !Ref myRouteTable
  mySubnetARouteTableAssociation3:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref mySubnet3
      RouteTableId: !Ref myRouteTable
  myPrivateSubnetARouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref myPrivateSubnet1
      RouteTableId: !Ref privateRouteTable
  myPrivateSubnetARouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref myPrivateSubnet2
      RouteTableId: !Ref privateRouteTable
  myPrivateSubnetARouteTableAssociation3:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref myPrivateSubnet3
      RouteTableId: !Ref privateRouteTable
  

  application:
   Type: 'AWS::EC2::SecurityGroup'
   Properties:
      GroupDescription: Base Security Group
      SecurityGroupIngress:
         - IpProtocol: tcp
           CidrIp: 0.0.0.0/0
           FromPort: 22
           ToPort: 22
         - IpProtocol: tcp
           CidrIp: 0.0.0.0/0
           FromPort: 80
           ToPort: 80
         - IpProtocol: tcp
           CidrIp: 0.0.0.0/0
           FromPort: 443
           ToPort: 443
         - IpProtocol: tcp
           CidrIp: 0.0.0.0/0
           FromPort: 8000
           ToPort: 8000
      VpcId: !Ref myVPC 
  database:
   Type: 'AWS::EC2::SecurityGroup'
   Properties:
      GroupDescription: Database Security Group
      VpcId: !Ref myVPC
  SGBaseIngress:
   Type: 'AWS::EC2::SecurityGroupIngress'
   Properties:
      IpProtocol: tcp
      FromPort: 3306
      ToPort: 3306
      SourceSecurityGroupId:
        Fn::GetAtt:
        - application
        - GroupId
      GroupId:
        Fn::GetAtt:
        - database
        - GroupId
  S3Bucket:
   Type: 'AWS::S3::Bucket'
   Properties:
      AccessControl: Private
      BucketName: aa-doc-bucket
      BucketEncryption:
        ServerSideEncryptionConfiguration:
          - ServerSideEncryptionByDefault:
              SSEAlgorithm: AES256
      LifecycleConfiguration:
        Rules:
          - Id: StandardIARule
            Prefix: standard_is
            Status: Enabled
            ExpirationInDays: 365
            Transitions:
              - TransitionInDays: 30
                StorageClass: STANDARD_IA
      PublicAccessBlockConfiguration:
          BlockPublicAcls: true
          BlockPublicPolicy: true
          IgnorePublicAcls: true
          RestrictPublicBuckets: true

   DeletionPolicy: Delete

  RDSDBParameterGroup:
   Type: 'AWS::RDS::DBParameterGroup'
   Properties:
      Description: MySQL Parameter Group
      Family: mysql8.0
      Parameters:
        sql_mode: IGNORE_SPACE
  MyDBSubnetGroup:
   Type: AWS::RDS::DBSubnetGroup
   Properties:
      DBSubnetGroupDescription: Subnet group for Aurora Database
      SubnetIds:
        - !Ref myPrivateSubnet1
        - !Ref myPrivateSubnet2
  MyDB:
    Type: 'AWS::RDS::DBInstance'
    Properties:
      DBName: csye6225
      DBInstanceIdentifier: csye6225
      DBInstanceClass: db.t3.micro
      AllocatedStorage: '50'
      Engine: MySQL
      EngineVersion: 8.0.30
      MultiAZ: 'false'
      MasterUsername: !Ref DBUsername
      MasterUserPassword: !Ref DBPassword
      PubliclyAccessible: 'false'
      DBSubnetGroupName: !Ref MyDBSubnetGroup
      VPCSecurityGroups:
        - !GetAtt database.GroupId
  Ec2Instance: 
   Type: AWS::EC2::Instance
   Properties: 
    ImageId: !Ref AMI
    KeyName: !Ref KeyName
    InstanceType: "t2.micro"
    BlockDeviceMappings: 
      - DeviceName: "/dev/xvda"
        Ebs: 
          VolumeType: "gp2"
          DeleteOnTermination: "false"
          VolumeSize: "20"
    NetworkInterfaces:
      - AssociatePublicIpAddress: "true"
        DeleteOnTermination: "true"
        SubnetId: !Ref mySubnet1
        DeviceIndex: "0"
        GroupSet:
         - !Ref application
    IamInstanceProfile: !Ref RootInstanceProfile
    UserData:
      Fn::Base64: 
        !Sub |
          #!/bin/bash
          echo export DB_HOST=${MyDB.Endpoint.Address} >> /etc/profile
          echo export DB_USER=${DBUsername} >> /etc/profile
          echo export DB_PASSWORD=${DBPassword} >> /etc/profile
          echo export DB_NAME="csye6225" >> /etc/profile
          echo export S3_BUCKET_NAME=${S3Bucket} >> /etc/profile
          echo export DB_HOST=${MyDB.Endpoint.Address} >> /etc/environment
          echo export DB_USER=${DBUsername} >> /etc/environment
          echo export DB_PASSWORD=${DBPassword} >> /etc/environment
          echo export DB_NAME="csye6225" >> /etc/environment
          echo export S3_BUCKET_NAME=${S3Bucket} >> /etc/environment
          sudo su root
          sudo pm2 restart all --update-env
          sudo pm2 save
          sudo systemctl daemon-reload
          cd /home/ubuntu/webapp/
          sudo systemctl restart node-service.service
  myIAMRole: 
    Type: "AWS::IAM::Role"
    Properties: 
      RoleName: "EC2-CSYE6225"
      AssumeRolePolicyDocument: 
        Version: "2012-10-17"
        Statement: 
          - 
            Effect: "Allow"
            Principal: 
              Service: 
                - "ec2.amazonaws.com"
            Action: 
              - "sts:AssumeRole"
      Path: "/"
  myIAMPolicy:
    Type: 'AWS::IAM::Policy'
    Properties:
      PolicyName: WebAppS3
      PolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Action: 
              - s3:GetObject
              - s3:PutObject
              - s3:DeleteObject
              - s3:PutObjectAcl
              - s3:ListBucket
              - s3:ListMultipartUploadParts
              - s3:AbortMultipartUpload
              - ec2:RunInstances
              - ec2:AssociateIamInstanceProfile
              - ec2:ReplaceIamInstanceProfileAssociation
              - kms:Decrypt
              - kms:GenerateDataKey
              - s3:ListAllMyBuckets
            Resource: 
              - !Sub arn:aws:s3:::${S3Bucket}
              - !Sub arn:aws:s3:::${S3Bucket}/*
      Roles:
        - !Ref myIAMRole
  # myIAMRolePolicy:
  #   Type: 'AWS::IAM::Policy'
  #   Properties:
  #     PolicyName: RoleCreation
  #     PolicyDocument:
  #       Version: "2012-10-17"
  #       Statement:
  #         - Effect: Allow
  #           Action: 
  #             - ec2:RunInstances
  #             - ec2:AssociateIamInstanceProfile
  #             - ec2:ReplaceIamInstanceProfileAssociation
      
  RootInstanceProfile: 
    Type: "AWS::IAM::InstanceProfile"
    Properties: 
      Path: "/"
      Roles: 
        - !Ref myIAMRole
Outputs:
    VpcId:
      Description: The VPC ID
      Value: !Ref myVPC
    SubnetId1:
      Description: The Subnet ID 1
      Value: !Ref mySubnet1
    SubnetId2:
      Description: The Subnet ID 2
      Value: !Ref mySubnet2
    SubnetId3:
      Description: The Subnet ID 3
      Value: !Ref mySubnet3
    InternetGateway:
      Description: Internet Gateway
      Value: !Ref myInternetGateway
    Route:
      Description: Route
      Value: !Ref myRoute
    RouteTable:
      Description: Route Table
      Value: !Ref myRouteTable
